# backlog-dynamics-modeling

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/backlog_dynamics_modeling/: __init__.py  computed_data.py  config.py  initial_data.py  main.py  project.py
src/backlog_dynamics_modeling/articles/: backlog_inv_gauss.md
src/backlog_dynamics_modeling/pages/: page_00_intro.py  page_01_inv_gauss.py  page_02_chart_test.py
src/backlog_dynamics_modeling/project/: charts.py  pdpd_chart.py  pdpd_model.py  project.py
