[project]
name = "backlog-dynamics-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ihor", email = "Ihor.Halaniuk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "streamlit>=1.54.0",
]

[project.scripts]
backlog-dynamics-modeling = "backlog_dynamics_modeling:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D10"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["ANN201", "PLR2004", "S101", "T201"]
"**/notebooks/*" = ["T201", "S101"]

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
